--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalRegistrationFee/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalRegistrationFee/CreateEdit.cshtml
@@ -4,14 +4,7 @@
     ViewBag.Title = Model.HospitalRegistrationFeeId > 0 ? "Update Hospital Registration Fee" : "Add Hospital Registration Fee";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
-    DropdownViewModel centreDropdown = new DropdownViewModel()
-            {
-                DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(),
-                DropdownName = "CentreCode",
-                DropdownSelectedValue = Model.CentreCode,
-                ChangeEvent = "",
-                IsDisabled = Model.HospitalRegistrationFeeId > 0
-            };
+    DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "CentreCode", DropdownSelectedValue = Model.CentreCode, ChangeEvent = "", IsDisabled = Model.HospitalRegistrationFeeId > 0 };
 
 }
 <!-- Page Content-->
@@ -29,7 +22,7 @@
                                 }
                                 else
                                 {
-                                    <h4 class="card-title">Create Hospital Registration Fee: @Model.FirstName @Model.LastName</h4>
+                                    <h4 class="card-title">Create Hospital Registration Fee</h4>
                                 }
                             </div><!--end col-->
                         </div>  <!--end row-->
@@ -38,51 +31,53 @@
                         @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
                         {
                             @Html.HiddenFor(m => m.HospitalRegistrationFeeId)
-                            @Html.HiddenFor(m => m.InventoryGeneralItemLineId)
-                            @Html.HiddenFor(m => m.CentreCode)
+
                             <div class="row">
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.CentreCode, new { @class = "form-label required" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", centreDropdown)
                                         @Html.ValidationMessageFor(x => x.CentreCode)
+                                        @if (Model.HospitalRegistrationFeeId > 0)
+                                        {
+                                            @Html.HiddenFor(x=>x.CentreCode)
+                                        }
                                     </div>
                                 </div>
-                                <div class="col-lg-3">
+                                <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.FromDate, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.FromDate, AdminGeneralHelper.DateFormatForTextBox(), new { @class = "form-control", @readonly = "true" })
                                         @Html.ValidationMessageFor(x => x.FromDate)
                                     </div>
                                 </div>
-                                <div class="col-lg-3">
+                                <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.UptoDate, new { @class = "form-label" })
                                         @Html.TextBoxFor(x => x.UptoDate, AdminGeneralHelper.DateFormatForTextBox(), new { @class = "form-control", @readonly = "true" })
                                         @Html.ValidationMessageFor(x => x.UptoDate)
                                     </div>
                                 </div>
-                                <div class="col-lg-3">
+                                <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.RegistrationService, new { @class = "form-label required" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
                                {
                                    DropdownType = DropdownTypeEnum.InventoryGeneralServiecs.ToString(),
                                    DropdownName = "InventoryGeneralItemLineId",
-                                   DropdownSelectedValue = Model.InventoryGeneralItemLineId
-                                    .ToString(),
+                                   DropdownSelectedValue = Model.InventoryGeneralItemLineId.ToString()
                                })
                                         @Html.ValidationMessageFor(x => x.InventoryGeneralItemLineId)
                                     </div>
                                 </div>
-                                <div class="col-lg-3">
+                                <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.Charges, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.Charges, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidDecimalNumeric()" })
                                         @Html.ValidationMessageFor(x => x.Charges)
                                     </div>
                                 </div>
-                                <div class="col-lg-3">
+                                <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.IsTaxExclusive, new { @class = "form-label" })
                                         <div class="form-check">
@@ -92,7 +87,8 @@
                                 </div>
                             </div>
                             <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
-                            <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
+                            @* <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a> *@
+                            <a href="../@controllerName/Cancel?SelectedCentreCode=@Model.CentreCode" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
                         }
                     </div>
                 </div>
