--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalRegistrationFee/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalRegistrationFee/_List.cshtml
@@ -19,11 +19,16 @@
                     {
                         <tr>
                             <td>@item.RegistrationService</td>
-                            <td>@item.FromDate</td>
-                            <td>@item.UptoDate</td>
-                            <td>@item.Charges</td>
+                            <td>@item.FromDate.ToCoditechDateFormat()</td>
+                            <td>
+                                @if (item.UptoDate != null)
+                                {
+                                    @Convert.ToDateTime(@item.UptoDate).ToCoditechDateFormat()
+                                }
+                            </td>
+                            <td>@AdminGeneralHelper.FormatPriceWithCurrency(@item.Charges)</td>
                             <td class="text-center">
-                                <a href="../@controllerName/Edit?hospitalRegistrationFeeId=@item.HospitalRegistrationFeeId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
+                                <a href="../@controllerName/Edit?hospitalRegistrationFeeId=@item.HospitalRegistrationFeeId" title="Update" class="btn btn-sm btn-soft-success btn-circle"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
                                 <a href="../@controllerName/Delete?hospitalRegistrationFeeIds=@item.HospitalRegistrationFeeId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
                             </td>
                         </tr>
