--- a/Coditech.Project/Admin/Coditech.Admin/Views/User/ResetPassword.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/User/ResetPassword.cshtml
@@ -47,8 +47,9 @@
                     </div>
                     <div class="form-group mb-2">
                         @Html.LabelFor(x => x.ConfirmPassword, new { @class = "form-label required" })
-                        <div class="input-group">
-                            @Html.TextBoxFor(x => x.ConfirmPassword, new { @class = "form-control", type = "password" })
+                        <div class="input-group password-input-wraper">
+                            @Html.TextBoxFor(x => x.ConfirmPassword, new { @class = "form-control password-input", type = "Password", placeholder = "Confirm Password here..." })
+                            <i class="fas fa-eye view-password"></i>
                         </div>
                         @Html.ValidationMessageFor(m => m.ConfirmPassword, null)
                     </div>
@@ -75,3 +76,18 @@
         </div>
     </div>
 </div>
+@section Scripts {
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $(".view-password").click(function () {
+                $(this).toggleClass("fa fa-eye-slash");
+                var inputAttribute = $('.password-input');
+                if (inputAttribute.attr("type") == "password") {
+                    inputAttribute.attr("type", "text");
+                } else {
+                    inputAttribute.attr("type", "password");
+                }
+            });
+        });
+    </script>
+}
