--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymWorkoutPlan/_GymWorkoutPlanSidePannel.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymWorkoutPlan/_GymWorkoutPlanSidePannel.cshtml
@@ -3,7 +3,7 @@
 @{
     Layout = null;
     long gymWorkoutPlanId = Convert.ToInt32(Model?.FirstOrDefault(x => x.Key == "GymWorkoutPlanId").Value);
-    long personId = Convert.ToInt64(Model?.FirstOrDefault(x => x.Key == "PersonId").Value);
+    //long personId = Convert.ToInt64(Model?.FirstOrDefault(x => x.Key == "PersonId").Value);
     string actionName = ViewContext.RouteData.Values["action"].ToString();
 }
 <div class="card sidebar-card">
@@ -13,7 +13,7 @@
                 <a class="nav-link" href="/GymWorkoutPlan/UpdateGymWorkoutPlanDetails?gymWorkoutPlanId=@gymWorkoutPlanId" aria-selected="true">
                     <i class="ti-menu"></i><h5 class="m-0 ps-2">Workout Plan</h5>
                 </a>
-                <a class="nav-link" href="/GymWorkoutPlan/GymWorkoutPlan?gymWorkoutPlanId=@gymWorkoutPlanId" aria-selected="true">
+                <a class="nav-link" href="/GymWorkoutPlan/GetWorkoutPlanDetails?gymWorkoutPlanId=@gymWorkoutPlanId" aria-selected="true">
                     <i class="fas fa-info-circle"></i><h5 class="m-0 ps-2">Workout Plan Details</h5>
                 </a>
                 <a class="nav-link" href="/GymWorkoutPlan/GetAssociatedMemberList?SelectedParameter1=@gymWorkoutPlanId" aria-selected="true">
@@ -22,4 +22,4 @@
             </div>
         </div>
     </div>
-</div>
+</div>  
