--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralFinancialYearMaster/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralFinancialYearMaster/_List.cshtml
@@ -21,8 +21,8 @@
                             <td>@item.FromDate.ToCoditechDateFormat()</td>
                             <td>@item.ToDate.ToCoditechDateFormat()</td>
                             <td class="text-center">
-                                <a href="../@controllerName/Edit?generalFinancialYearId=@item.GeneralFinancialYearId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
-                                <a href="../@controllerName/Delete?FinancialYearIds=@item.GeneralFinancialYearId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
+                                <a href="../@controllerName/Edit?generalFinancialYearId=@item.GeneralFinancialYearId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a>@* <span class="m-2">|</span> *@
+                                @* <a href="../@controllerName/Delete?FinancialYearIds=@item.GeneralFinancialYearId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a> *@
                             </td>
                         </tr>
                     }
