--- a/Coditech.Project/Admin/Coditech.Admin/Views/Inventory/InventoryCategory/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Inventory/InventoryCategory/_List.cshtml
@@ -40,7 +40,7 @@
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                                                 <!-- Delete action with GeneralNotificationId parameter -->
-                                                <a href="../@controllerName/Delete?InventoryCategoryId=@item.InventoryCategoryId" class="btn btn-outline-danger">Delete</a>
+                                                <a href="../@controllerName/Delete?inventoryCategoryIds=@item.InventoryCategoryId" class="btn btn-outline-danger">Delete</a>
                                             </div>
                                         </div>
                                     </div>
