--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorVisitingCharges/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorVisitingCharges/CreateEdit.cshtml
@@ -109,6 +109,7 @@
 @section scripts {
     <script type="text/javascript">
         $(function () {
+            $('#Charges').val('');
             $("#FromDate").datepicker({
                 changeMonth: true,
                 changeYear: true,
