--- a/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminRoleMaster/AssociateUnAssociateAdminRoleToUser.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminRoleMaster/AssociateUnAssociateAdminRoleToUser.cshtml
@@ -94,24 +94,46 @@
 @section scripts {
     <script type="text/javascript">
         $(function () {
+            var dateFormat = "@AdminGeneralHelper.DateFormatForCalendar()";
 
+            // Initialize WorkFromDate Datepicker
             $("#WorkFromDate").datepicker({
                 changeMonth: true,
                 changeYear: true,
-                format: "@AdminGeneralHelper.DateFormatForCalendar()",
+                dateFormat: dateFormat,
                 language: "en",
                 autoSize: true,
-                minYear: parseInt(moment().format('YYYY'), 10)
+                gotoCurrent: true,
+                clearBtn: true,
+                showButtonPanel: true,
+                closeText: 'Clear',
+                onClose: function (dateText, inst) {
+                    if ($(window.event.srcElement).hasClass('ui-datepicker-close')) {
+                        document.getElementById(this.id).value = '';
+                    }
+                },
+                onSelect: function (selectedDate) {
+                    // Set WorkToDate's minimum date to the selected WorkFromDate
+                    $("#WorkToDate").datepicker("option", "minDate", selectedDate);
+                }
             });
 
-
+            // Initialize WorkToDate Datepicker
             $("#WorkToDate").datepicker({
                 changeMonth: true,
                 changeYear: true,
-                format: "@AdminGeneralHelper.DateFormatForCalendar()",
+                dateFormat: dateFormat,
                 language: "en",
                 autoSize: true,
-                minYear: parseInt(moment().format('YYYY'), 10)
+                gotoCurrent: true,
+                clearBtn: true,
+                showButtonPanel: true,
+                closeText: 'Clear',
+                onClose: function (dateText, inst) {
+                    if ($(window.event.srcElement).hasClass('ui-datepicker-close')) {
+                        document.getElementById(this.id).value = '';
+                    }
+                }
             });
         });
     </script>
