--- a/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMTraineeAssignment/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMTraineeAssignment/CreateEdit.cshtml
@@ -37,21 +37,21 @@
                             <div class="row">
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.SelectedCentreCode, new { @class = "form-label" })
+                                        @Html.LabelFor(x => x.SelectedCentreCode, new { @class = "form-label required"})
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", centreDropdown)
                                         @Html.ValidationMessageFor(x => x.SelectedCentreCode)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.GeneralTrainerMasterId, new { @class = "form-label required" })
+                                        @Html.LabelFor(x => x.GeneralTrainerMasterId, new { @class = "form-label required"})
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", trainerDropdown)
                                         @Html.ValidationMessageFor(x => x.GeneralTrainerMasterId)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.DBTMTraineeDetailId, new { @class = "form-label required" })
+                                        @Html.LabelFor(x => x.DBTMTraineeDetailId, new { @class = "form-label required"})
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
                                {
                                    DropdownType = DropdownTypeEnum.TraineeDetailsListByDBTMTrainer.ToString(),
