--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymWorkoutPlan/WorkoutPlanDetails.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymWorkoutPlan/WorkoutPlanDetails.cshtml
@@ -36,7 +36,32 @@
                                             <div class="d-flex justify-content-end">
                                                 <a data-bs-toggle="modal" data-bs-target="#@addGymWorkoutPlanDetailsModel.ModelPopUpId" href="void javascritp(0)" onclick="GymWorkoutPlan.AddWorkoutPlanDetails('@addGymWorkoutPlanDetailsModel.ModalContentId','@Model.GymWorkoutPlanId','@week')" title="Add " class="btn btn-sm btn-soft-success btn-circle float-end"><i class="fas ti-plus"></i></a>
 
-                                                <a href="../@controllerName/Delete?" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
+                                                @* <!-- Delete Button for week -->
+                                                <a href="#" title="Delete" class="btn btn-sm btn-soft-danger btn-circle" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal_@week">
+                                                    <i class="fas fa-trash-alt"></i>
+                                                </a>
+                                                <!-- Delete Confirmation Modal -->
+                                                <div class="modal fade" id="confirmDeleteModal_@week" tabindex="-1" role="dialog" aria-labelledby="confirmDeleteModalLabel" aria-hidden="true">
+                                                    <div class="modal-dialog modal-dialog-centered" style="max-width: 500px;" role="document">
+                                                        <div class="modal-content">
+                                                            <div class="modal-header">
+                                                                <h5 class="modal-title" id="confirmDeleteModalLabel">Confirm Delete</h5>
+                                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                            </div>
+                                                            <div class="modal-body" style="text-align: left;">
+                                                                <span style="font-size: 24px; margin-right: 10px;"><i class="fas fa-exclamation-triangle text-danger"></i></span>
+                                                                <span style="font-size: 16px;">Are you sure you want to delete this week?</span>
+                                                            </div>
+                                                            <div class="modal-footer">
+                                                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                                                <!-- Delete action with selectedCentreCode parameter -->
+                                                                <a href="../@controllerName/DeleteWorkoutPlanDetailsWeek?gymWorkoutPlanId=@Model.GymWorkoutPlanId&workoutWeekNumber=@week" class="btn btn-outline-danger" onclick="GymWorkoutPlan.DeleteWorkoutPlanDetailsWeek('@week')">Delete</a>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div> *@
+
+                                                <a href="../@controllerName/DeleteWorkoutPlanDetailsWeek?gymWorkoutPlanId=@Model.GymWorkoutPlanId&workoutWeekNumber=@week" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
                                             </div>
                                         </div>
                                         <div class="card-body">
@@ -49,7 +74,31 @@
                                                                 <h4 class="card-title">Day @day</h4>
                                                                 <div class="d-flex justify-content-end">
                                                                     <a data-bs-toggle="modal" data-bs-target="#@addGymWorkoutPlanDetailsModel.ModelPopUpId" href="javascritp:void(0)" onclick="GymWorkoutPlan.AddWorkoutPlanDetails('@addGymWorkoutPlanDetailsModel.ModalContentId','@Model.GymWorkoutPlanId','@week','@day')" title="Add " class="btn btn-sm btn-soft-success btn-circle float-end"><i class="fas ti-plus"></i></a>
-                                                                    <a href="../@controllerName/Delete?" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
+                                                                   @*  <!-- Delete Button for Day-->
+                                                                    <a href="#" title="Delete" class="btn btn-sm btn-soft-danger btn-circle" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal_@day">
+                                                                        <i class="fas fa-trash-alt"></i>
+                                                                    </a>
+                                                                    <!-- Delete Confirmation Modal -->
+                                                                    <div class="modal fade" id="confirmDeleteModal_@day" tabindex="-1" role="dialog" aria-labelledby="confirmDeleteModalLabel" aria-hidden="true">
+                                                                        <div class="modal-dialog modal-dialog-centered" style="max-width: 500px;" role="document">
+                                                                            <div class="modal-content">
+                                                                                <div class="modal-header">
+                                                                                    <h5 class="modal-title" id="confirmDeleteModalLabel">Confirm Delete</h5>
+                                                                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                                                </div>
+                                                                                <div class="modal-body" style="text-align: left;">
+                                                                                    <span style="font-size: 24px; margin-right: 10px;"><i class="fas fa-exclamation-triangle text-danger"></i></span>
+                                                                                    <span style="font-size: 16px;">Are you sure you want to delete this day?</span>
+                                                                                </div>
+                                                                                <div class="modal-footer">
+                                                                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                                                                    <!-- Delete action with selectedCentreCode parameter -->
+                                                                                    <a href="../@controllerName/DeleteWorkoutPlanDetailsDay?gymWorkoutPlanId=@Model.GymWorkoutPlanId&workoutWeekNumber=@week&workoutDayNumber=@day" class="btn btn-outline-danger" onclick="GymWorkoutPlan.DeleteWorkoutPlanDetailsDay('@day')">Delete</a>
+                                                                                </div>
+                                                                            </div>
+                                                                        </div>
+                                                                    </div> *@
+                                                                    <a href="../@controllerName/DeleteWorkoutPlanDetailsDay?gymWorkoutPlanId=@Model.GymWorkoutPlanId&workoutWeekNumber=@week&workoutDayNumber=@day" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
                                                                 </div>
                                                             </div>
                                                             <div class="card-body">
@@ -77,7 +126,33 @@
                                                                                         <th rowspan="@item.GymWorkoutPlanSetList.Count">@item.WorkoutName</th>
                                                                                         <th rowspan="@item.GymWorkoutPlanSetList.Count">@item.GymWorkoutPlanSetList.Count</th>
                                                                                         <td>@item1.Weight Kg @item1.Repetitions Rep @item1.Duration Sec</td>
-                                                                                        <th rowspan="@item.GymWorkoutPlanSetList.Count"><a href="#" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a></th>
+                                                                                        <th rowspan="@item.GymWorkoutPlanSetList.Count">
+                                                                                         @*    <!-- Delete Button for Set-->
+                                                                                            <a href="#" title="Delete" class="btn btn-sm btn-soft-danger btn-circle" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal_@item.GymWorkoutPlanDetailId">
+                                                                                                <i class="fas fa-trash-alt"></i>
+                                                                                            </a>
+                                                                                            <!-- Delete Confirmation Modal -->
+                                                                                            <div class="modal fade" id="confirmDeleteModal_@item.GymWorkoutPlanDetailId" tabindex="-1" role="dialog" aria-labelledby="confirmDeleteModalLabel" aria-hidden="true">
+                                                                                                <div class="modal-dialog modal-dialog-centered" style="max-width: 500px;" role="document">
+                                                                                                    <div class="modal-content">
+                                                                                                        <div class="modal-header">
+                                                                                                            <h5 class="modal-title" id="confirmDeleteModalLabel">Confirm Delete</h5>
+                                                                                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                                                                        </div>
+                                                                                                        <div class="modal-body" style="text-align: left;">
+                                                                                                            <span style="font-size: 24px; margin-right: 10px;"><i class="fas fa-exclamation-triangle text-danger"></i></span>
+                                                                                                            <span style="font-size: 16px;">Are you sure you want to delete this record?</span>
+                                                                                                        </div>
+                                                                                                        <div class="modal-footer">
+                                                                                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                                                                                            <!-- Delete action with selectedCentreCode parameter -->
+                                                                                                            <a href="../@controllerName/DeleteWorkoutPlanDetailsSet?gymWorkoutPlanDetailId=@item.GymWorkoutPlanDetailId" title="Delete" class="btn btn-outline-danger" onclick="GymWorkoutPlan.DeleteWorkoutPlanDetailsSet('@item.GymWorkoutPlanDetailId')">Delete</a>
+                                                                                                        </div>
+                                                                                                    </div>
+                                                                                                </div>
+                                                                                            </div> *@
+                                                                                            <a href="../@controllerName/DeleteWorkoutPlanDetailsSet?gymWorkoutPlanId=@Model.GymWorkoutPlanId&gymWorkoutPlanDetailId=@item.GymWorkoutPlanDetailId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
+                                                                                        </th>
                                                                                     </tr>
                                                                                 }
                                                                                 else
@@ -96,7 +171,7 @@
                                                                     <span>No Workouts added</span>
                                                                 }
                                                                 <div class="text-center mt-3">
-                                                                    <button data-bs-toggle="modal" data-bs-target="#@addGymWorkoutPlanDetailsModel.ModelPopUpId" href="javascritp:void(0)" onclick="GymWorkoutPlan.AddWorkoutPlanDetails('@addGymWorkoutPlanDetailsModel.ModalContentId','@Model.GymWorkoutPlanId','@week','@day')" type="button" class="btn btn-success" >Add Workout</button>
+                                                                    <button data-bs-toggle="modal" data-bs-target="#@addGymWorkoutPlanDetailsModel.ModelPopUpId" href="javascritp:void(0)" onclick="GymWorkoutPlan.AddWorkoutPlanDetails('@addGymWorkoutPlanDetailsModel.ModalContentId','@Model.GymWorkoutPlanId','@week','@day')" type="button" class="btn btn-success">Add Workout</button>
                                                                 </div>
                                                             </div>
                                                         </div>
