--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralNationalityMaster/List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralNationalityMaster/List.cshtml
@@ -10,8 +10,8 @@
         <div class="row">
             <div class="col-12">
                 <div class="card">
-                    <div class="card-header">                   
-                            <span class="card-title">@AdminResources.LabelNationalityList</span>
+                    <div class="card-header">
+                        <span class="card-title">Nationality List</span>
                             <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/Create" role="button"><i class="fas fa-plus me-2"></i>Add Nationality</a>
                             
                         </div>                  
